--- a/cf/i18n/resources/es-es.untranslated.json
+++ b/cf/i18n/resources/es-es.untranslated.json
@@ -552,6 +552,10 @@
     "translation": "CF_NAME install-plugin ~/Downloads/plugin-foobar"
   },
   {
+    "id": "CF_NAME isolation-segments",
+    "translation": ""
+  },
+  {
     "id": "CF_NAME list-plugin-repos",
     "translation": "CF_NAME list-plugin-repos"
   },
@@ -1292,6 +1296,10 @@
     "translation": "Failed to create a local temporary zip file for the buildpack"
   },
   {
+    "id": "Getting isolation segments as {{.CurrentUser}}...",
+    "translation": ""
+  },
+  {
     "id": "Getting routes as {{.CurrentUser}} ...",
     "translation": ""
   },
@@ -1377,6 +1385,10 @@
   },
   {
     "id": "Last uploaded:",
+    "translation": ""
+  },
+  {
+    "id": "List all isolation segments",
     "translation": ""
   },
   {
@@ -2113,6 +2125,10 @@
   },
   {
     "id": "integer",
+    "translation": ""
+  },
+  {
+    "id": "isolation-segments",
     "translation": ""
   },
   {
