--- a/cf/i18n/resources/it-it.untranslated.json
+++ b/cf/i18n/resources/it-it.untranslated.json
@@ -356,6 +356,10 @@
     "translation": "CF_NAME install-plugin ~/Downloads/plugin-foobar"
   },
   {
+    "id": "CF_NAME isolation-segments",
+    "translation": ""
+  },
+  {
     "id": "CF_NAME list-plugin-repos",
     "translation": "CF_NAME list-plugin-repos"
   },
@@ -844,6 +848,10 @@
     "translation": "Failed to create a local temporary zip file for the buildpack"
   },
   {
+    "id": "Getting isolation segments as {{.CurrentUser}}...",
+    "translation": ""
+  },
+  {
     "id": "Getting routes as {{.CurrentUser}} ...",
     "translation": ""
   },
@@ -921,6 +929,10 @@
   },
   {
     "id": "Last uploaded:",
+    "translation": ""
+  },
+  {
+    "id": "List all isolation segments",
     "translation": ""
   },
   {
@@ -1637,6 +1649,10 @@
   },
   {
     "id": "integer",
+    "translation": ""
+  },
+  {
+    "id": "isolation-segments",
     "translation": ""
   },
   {
