--- a/cf/i18n/resources/ja-jp.untranslated.json
+++ b/cf/i18n/resources/ja-jp.untranslated.json
@@ -536,6 +536,10 @@
     "translation": "CF_NAME install-plugin ~/Downloads/plugin-foobar"
   },
   {
+    "id": "CF_NAME isolation-segments",
+    "translation": ""
+  },
+  {
     "id": "CF_NAME list-plugin-repos",
     "translation": "CF_NAME list-plugin-repos"
   },
@@ -1248,6 +1252,10 @@
     "translation": "Failed to create a local temporary zip file for the buildpack"
   },
   {
+    "id": "Getting isolation segments as {{.CurrentUser}}...",
+    "translation": ""
+  },
+  {
     "id": "Getting routes as {{.CurrentUser}} ...",
     "translation": ""
   },
@@ -1325,6 +1333,10 @@
   },
   {
     "id": "Last uploaded:",
+    "translation": ""
+  },
+  {
+    "id": "List all isolation segments",
     "translation": ""
   },
   {
@@ -2045,6 +2057,10 @@
   },
   {
     "id": "integer",
+    "translation": ""
+  },
+  {
+    "id": "isolation-segments",
     "translation": ""
   },
   {
