--- a/cf/i18n/resources/de-de.untranslated.json
+++ b/cf/i18n/resources/de-de.untranslated.json
@@ -2108,6 +2108,10 @@
     "translation": ""
   },
   {
+    "id": "isolation segments:",
+    "translation": ""
+  },
+  {
     "id": "isolation-segments",
     "translation": ""
   },
