--- a/cf/i18n/resources/pt-br.all.json
+++ b/cf/i18n/resources/pt-br.all.json
@@ -2692,10 +2692,6 @@
     "translation": "Erro ao reiniciar o aplicativo: {{.Error}}"
   },
   {
-    "id": "Error restarting application: {{.Message}}\n\nTIP: Use '{{.BuildpackCommand}}' to see a list of supported buildpacks.",
-    "translation": ""
-  },
-  {
     "id": "Error retrieving stack: ",
     "translation": "Erro ao recuperar pilha: "
   },
@@ -2710,6 +2706,10 @@
   {
     "id": "Error saving manifest: {{.Error}}",
     "translation": "Erro ao salvar manifest: {{.Error}}"
+  },
+  {
+    "id": "Error staging application: {{.Message}}\n\nTIP: Use '{{.BuildpackCommand}}' to see a list of supported buildpacks.",
+    "translation": ""
   },
   {
     "id": "Error updating buildpack {{.Name}}\n{{.Error}}",
