--- a/cf/i18n/resources/zh-hant.all.json
+++ b/cf/i18n/resources/zh-hant.all.json
@@ -2692,10 +2692,6 @@
     "translation": "重新啟動應用程式時發生錯誤: {{.Error}}"
   },
   {
-    "id": "Error restarting application: {{.Message}}\n\nTIP: Use '{{.BuildpackCommand}}' to see a list of supported buildpacks.",
-    "translation": ""
-  },
-  {
     "id": "Error retrieving stack: ",
     "translation": "擷取堆疊時發生錯誤: "
   },
@@ -2710,6 +2706,10 @@
   {
     "id": "Error saving manifest: {{.Error}}",
     "translation": "儲存資訊清單時發生錯誤: {{.Error}}"
+  },
+  {
+    "id": "Error staging application: {{.Message}}\n\nTIP: Use '{{.BuildpackCommand}}' to see a list of supported buildpacks.",
+    "translation": ""
   },
   {
     "id": "Error updating buildpack {{.Name}}\n{{.Error}}",
