--- a/cf/i18n/resources/it-it.untranslated.json
+++ b/cf/i18n/resources/it-it.untranslated.json
@@ -1104,6 +1104,10 @@
     "translation": "Recreate the app's executable artifact using the latest pushed app files and the latest environment (variables, service bindings, buildpack, stack, etc.)"
   },
   {
+    "id": "Removing entitlement from {{.OrgName}} to isolation segment {{.SegmentName}} as {{.CurrentUser}}...",
+    "translation": ""
+  },
+  {
     "id": "Repository: ",
     "translation": "Repository: "
   },
@@ -1121,6 +1125,10 @@
   },
   {
     "id": "Retrieving logs for app {{.AppName}} in org {{.OrgName}} / space {{.SpaceName}} as {{.Username}}...",
+    "translation": ""
+  },
+  {
+    "id": "Revoke an organization's entitlement to an isolation segment",
     "translation": ""
   },
   {
@@ -1629,6 +1637,10 @@
   },
   {
     "id": "destination",
+    "translation": ""
+  },
+  {
+    "id": "disable-org-isolation",
     "translation": ""
   },
   {
