--- a/cf/i18n/resources/ko-kr.untranslated.json
+++ b/cf/i18n/resources/ko-kr.untranslated.json
@@ -1504,6 +1504,10 @@
     "translation": "Recreate the app's executable artifact using the latest pushed app files and the latest environment (variables, service bindings, buildpack, stack, etc.)"
   },
   {
+    "id": "Removing entitlement from {{.OrgName}} to isolation segment {{.SegmentName}} as {{.CurrentUser}}...",
+    "translation": ""
+  },
+  {
     "id": "Requested state:",
     "translation": ""
   },
@@ -1517,6 +1521,10 @@
   },
   {
     "id": "Retrieving logs for app {{.AppName}} in org {{.OrgName}} / space {{.SpaceName}} as {{.Username}}...",
+    "translation": ""
+  },
+  {
+    "id": "Revoke an organization's entitlement to an isolation segment",
     "translation": ""
   },
   {
@@ -2017,6 +2025,10 @@
   },
   {
     "id": "destination",
+    "translation": ""
+  },
+  {
+    "id": "disable-org-isolation",
     "translation": ""
   },
   {
